objects/nFUSE__App_Plugin__mdt.object
<CustomObject>
    <description>This object houses nFUSE Integration plug-in definitions.</description>
    <fields>
        <fullName>nFUSE__Activator__c</fullName>
        <description>Activator class for the plugin.</description>
        <label>Activator Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Bean_Name__c</fullName>
        <description>Soft reference to Bean_Registry__c.</description>
        <label>Unique Bean Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Filter__c</fullName>
        <description>Enables filtering plugins based on criteria.</description>
        <label>Filter</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>nFUSE__Major_Version__c</fullName>
        <description>The major API version.</description>
        <label>Major Version</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Middleware_Certificate__c</fullName>
        <description>The certificate for an App Plugin specific middleware.</description>
        <label>Middleware Certificate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Middleware_Endpoint__c</fullName>
        <description>An optional Endpoint URL for an App Plugin specific middleware.  If a value is not provided the Integration Platform Middleware is used.</description>
        <label>Middleware Endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Middleware_Password__c</fullName>
        <description>The password for an App Plugin specific middleware.</description>
        <label>Middleware Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Middleware_Username__c</fullName>
        <description>The username for an App Plugin specific middleware.</description>
        <label>Middleware Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Minor_Version__c</fullName>
        <description>The minor API version.</description>
        <label>Minor Version</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Provider_Name__c</fullName>
        <description>The provider name used for messaging.</description>
        <label>Provider Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFUSE__Timeout__c</fullName>
        <defaultValue>3000</defaultValue>
        <description>The HTTP request timeout duration in milliseconds</description>
        <label>Timeout</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFUSE__Type__c</fullName>
        <description>The plugin type name.</description>
        <label>Type Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>App Plugin</label>
    <pluralLabel>App Plugins</pluralLabel>
</CustomObject>